tests/ui/proc_macro_hack.stderr
error: BOOM
 --> $DIR/proc_macro_hack.rs:5:25
  |
5 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                         ^^^

error: BOOM
 --> $DIR/proc_macro_hack.rs:5:41
  |
5 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                                         ^^^^^

warning: unreachable expression
 --> $DIR/proc_macro_hack.rs:5:32
  |
5 |     let nine = add_one!(two) + add_one!(2 + 3);
  |                -------------   ^^^^^^^^^^^^^^^ unreachable expression
  |                |
  |                any code following this expression is unreachable
  |
  = note: `#[warn(unreachable_code)]` on by default
  = note: this warning originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
